# appam-scheduler

./: .gitignore  Makefile  QUICKSTART.md  README.md  SCHEDULE_SUMMARY.md  booth_value_calculator.py  create_final_schedule.py  dual_scorer.py  export_slot_schedule.py  export_to_json.py  extract_presenters_from_html.py  final_schedule.json  intelligent_scorer.py  networking_recommendations.py  optimal_scheduler.py  package-lock.json  package.json  pyproject.toml  relevance_scorer.py  requirements.txt  run_pipeline.sh  scheduler.py  scrape_working.py  scraper.py  session_ids_all.txt  smart_rescorer.py
.github/workflows/: deploy.yml
public/: CORRECTED_SCHEDULE.md  FINAL_OPTIMIZED_SCHEDULE.md  RECOMMENDED_SCHEDULE.md  SCHEDULE.md  index.html
public/data/: locations.json  networking_contacts.json  presenters.json  schedule.json  sessions.json  stats.json  team_schedule.json  time_slots.json
src/: App.css  App.js  index.css
tests/: test_relevance_scorer.py  test_scraper.py
