[project]
name = "appam-scheduler"
version = "1.0.0"
description = "APPAM Conference Scheduler for PolicyEngine Team"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"}
]
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.48.0",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=html --cov-report=term"

[tool.coverage.run]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
